--- a/p1/comun.html
+++ b/p1/comun.html
@@ -13,6 +13,8 @@
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/27260d853d.js" crossorigin="anonymous"></script>    
     <title>Document</title>
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 <body>
     <header>
