--- a/p1/nueva.html
+++ b/p1/nueva.html
@@ -13,6 +13,7 @@
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/27260d853d.js" crossorigin="anonymous"></script>    
     <title>Nueva</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 <body>
     <header>
@@ -40,7 +41,7 @@
         <h2>Nueva publicación</h2>
         <form method="post">
             <label>Título: <input type="text" name="titulo" id="titulo" maxlength="200" required></label>
-            <label>Texto: <br> <textarea name="texto" id="texto" required></textarea></label> 
+            <label>Texto: <br><textarea name="texto" id="texto" required></textarea></label> 
             <label>Ubicación: <input list="ubis" name="ubi" id="ubi" maxlength="100" required> <!-- ojo que la list=id del datalist (ubis) --> </label>
             <datalist id="ubis">
                 <option value="Poble Nou">
