--- a/p1/registro.html
+++ b/p1/registro.html
@@ -14,6 +14,7 @@
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/27260d853d.js" crossorigin="anonymous"></script>    
     <title>Registro</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 <body>
     <header>
@@ -45,7 +46,7 @@
             <label>Repita contraseña: <input type="password" name="contrasenya2" id="contrasenya2" pattern="[a-zA-Z0-9._-]{4,20}"></label>
             <label>Email: <input type="email" required></label>
             <label for="img3">Foto: <img src="img/usuvoid.jpg" alt=""></label> <input type="file" id="img3" name="img" class="img" accept="image/*">
-            <label ><i class="fa-solid fa-folder-open"></i><input type="file" name="img" accept="image/*" class="img"> </label>
+            <label><i class="fa-solid fa-folder-open"></i><input type="file" name="img" accept="image/*" class="img"> </label>
             <button class="boton" type="button"><i class="fa-solid fa-trash-can"></i> Eliminar foto</button>
             <input type="submit" class="boton" value="Registrarse">
         </form>
