--- a/p1/nueva.html
+++ b/p1/nueva.html
@@ -39,7 +39,7 @@
 
     <main>
         <h2>Nueva publicación</h2>
-        <form method="post">
+        <form method="">
             <label>Título: <input type="text" name="titulo" id="titulo" maxlength="200" required></label>
             <label>Texto: <br><textarea name="texto" id="texto" required></textarea></label> 
             <label>Ubicación: <input list="ubis" name="ubi" id="ubi" maxlength="100" required> <!-- ojo que la list=id del datalist (ubis) --> </label>
